fix search icon on mobile

--- a/assets/sass/osuny-suggestions.sass
+++ b/assets/sass/osuny-suggestions.sass
@@ -44,6 +44,7 @@
             &__form
                 &::after
                     top: $spacing-5
+                    position: absolute
             &__search-input,
             &__search-message
                 left: auto
